2005-02-08  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* insetcollapsable.C (leaveInset): size() -> depth()
	* insettabular.C (isRightToLeft): ditto

2005-02-03  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* insetert.C (latex, linuxdoc, docbook): remove newline handling
	* insetert.C (doDispatch): clean pasted paragraphs
	* insetert.C (getStatus): suppress more lfuns
	* insetert.C (insetAllowed): return always false

2005-01-31  Asger Ottar Alstrup  <aalstrup@laerdal.dk>

	* inset.C:
	* insetbase.C:
	* insettabular.C:
	* updatableinset.C: Use new cursor accessors.

2005-01-31  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* insetinclude.C (loadIfNeeded): rewrite to use boost.filesystem

2005-01-31  Angus Leeming  <leeming@lyx.org>

	* insetgraphicsParams.C: protect a #warning preprocessor call
	with a #ifdef WITH_WARNINGS guard.

2005-01-27  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* Several files: use convert<> instead of atoi,strToXXX and friends

2005-01-23  Angus Leeming  <leeming@lyx.org>

	* insetbibitem.h (bibitemWidest): declare the function.

2005-01-14  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* insetgraphics.C (prepareFile): move the invocation of the default
	converter to ../converter.C
	* insetgraphics.C (prepareFile), ExternalSupport.C (updateExternal):
	call convert with try_default == true

2005-01-11  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* insetgraphics.C (prepareFile): add missing calls to addExternalFile
	* ExternalSupport.[Ch] (doSubstitution): take a new parameter that
	determines what variables are substituted
	* ExternalSupport.C (updateExternal): fix substitution of
	ReferencedFiles

2005-01-10  Angus Leeming  <leeming@lyx.org>

	* ExternalTemplate.C: use support/package.h to provide the paths to the
	various directories used by LyX.

2005-01-06  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* insetwrap.C:
	* insettabular.C:
	* insetinclude.C:
	* insetfloat.C:
	* insetexternal.C:
	* insetbibitem.C: